feat: ensure Login starts with submit button disabled

--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -41,7 +41,12 @@
     }
 
     .submit {
-      margin-top:32px
+      margin-top:32px   
+    }
+
+    .submit[disabled] {
+        background-color:$disabled;  
+        color: $disabledLabel;       
     }
 
     .link {
