--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -1,18 +1,18 @@
 @import '../../styles/colors.scss';
 
-.login {  
+.login {
   display: flex;
   flex-direction: column;
-  height:100vh;
+  height: 100vh;
   justify-content: space-between;
 
-  .header{
+  .header {
     display: flex;
     flex-direction: column;
     border-top: 40px solid $primaryDark;
     background-color: $primary;
-    align-items:center;
-    
+    align-items: center;
+
     img {
       margin-top: 40px;
     }
@@ -23,30 +23,34 @@
     }
   }
 
-  .form{
+  .form {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
     width: 400px;
     background-color: $white;
-    padding:40px;
-    border-radius:8px;
+    padding: 40px;
+    border-radius: 8px;
     align-self: center;
     box-shadow: 0px 1px 3px -1px $black;
 
     h2 {
-      color:$primaryDark;
+      color: $primaryDark;
       text-align: center;
       font-size: 20px;
       text-transform: uppercase;
     }
 
     .submit {
-      margin-top:32px   
+      margin-top: 32px;
     }
 
     .submit[disabled] {
-        background-color:$disabled;  
-        color: $disabledLabel;       
+      background-color: $disabled;
+      color: $disabledLabel;
+
+      &:hover {
+        filter: brightness(1);
+      }
     }
 
     .link {
@@ -60,7 +64,5 @@
         text-decoration: underline;
       }
     }
-
-  
-  } 
+  }
 }
