--- a/src/presentation/styles/global.scss
+++ b/src/presentation/styles/global.scss
@@ -12,7 +12,7 @@ body {
   background-color: $background;
 }
 
-input[type="password"],input[type="email"] {
+input[type="password"],input[type="email"],input[type="text"] {
 border: 1px solid $primaryLight;
 line-height:40px;
 border-radius: 4px;
@@ -31,7 +31,7 @@ button {
   border:none;
   line-height:60px;
   transition: filter 0.2s;
-  
+
   &:hover{
     filter: brightness(0.9)
   }
